fix(design): fix PadButton labels overflow

--- a/src/style/PadButton.sass
+++ b/src/style/PadButton.sass
@@ -1,16 +1,18 @@
 .pad-button
-	box-sizing: border-box
 	align-items: center
 	justify-content: center
 	display: inline-flex
 	margin: 8px
+	border-radius: 6px
+	box-sizing: border-box
 	width: 78px
 	height: 78px
-	border-radius: 6px
 	background: #aaaaaa
 	cursor: pointer
 	.pad-button-label
 		font: 10pt monospace
+		text-align: center
+		word-break: break-all
 		user-select: none
 	&.selected
 		border: 4px solid aqua
